# irdb

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN-AGE-INTEGRATION.md  README.md  README_DOCKER.md  README_K8s.md  docker-compose.yml  kind-config.yaml  postgresql.conf
.claude/: 2025-12-11-documentation.md  2025-12-11-pg_search-rust-test-examples.md  CLAUDE.md  spec.md  ui_spec.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md  plan.md
.roo/rules-debug/: AGENTS.md
docker-entrypoint-initdb.d/: 00-extensions.sql  01-ai-extensions.sql  02-validating-bm25.sql  03-simple-vector-test.sql  04-age-setup.sql  05-comprehensive-test.sql
docs/: 01-architecture.md  02-deployment.md  03-hybrid-search.md  04-web-app.md  05-references.md  06-testing.md  README.md
k8s/: .helmignore  Chart.yaml  README.md  setup.sh  values-dev.yaml  values-prod.yaml  values.yaml  verify-extensions.sh
k8s/base/: cluster.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: cluster-patch.yaml  kustomization.yaml
k8s/templates/: NOTES.txt  _helpers.tpl  clusterimagecatalog.yaml  nodeport-service.yaml
pg_search_tests/: .gitignore  Cargo.toml  Leptos.toml  README.md  README_WEB_APP.md  package-lock.json  package.json  tailwind.config.js
pg_search_tests/.cargo/: config.toml
pg_search_tests/data/: products.json
pg_search_tests/sql_examples/: 00_setup_extensions.sql  01_fuzzy_search.sql  03_boolean_search.sql  05_complete_setup.sql  07_snippet_highlighting.sql  09_products_data.sql  10_bm25_search_tests.sql  11_vector_search_tests.sql  12_hybrid_search_tests.sql  13_facet_aggregation_tests.sql  README.md
pg_search_tests/src/: lib.rs
pg_search_tests/src/fixtures/: mod.rs
pg_search_tests/src/fixtures/tables/: mod.rs  products.rs
pg_search_tests/src/web_app/: app.rs  mod.rs  server_fns.rs
pg_search_tests/src/web_app/api/: db.rs  mod.rs  queries.rs  server_fns.rs
pg_search_tests/src/web_app/components/: common.rs  mod.rs  product.rs  search.rs
pg_search_tests/src/web_app/model/: mod.rs
pg_search_tests/src/web_app/pages/: mod.rs  search.rs
pg_search_tests/src/web_app/style/: main.css  tailwind.css
pg_search_tests/tests/: advanced_search_tests.rs  app_logic_tests.rs  backend_search_tests.rs  bm25_detailed_tests.rs  common_components_tests.rs  component_render_tests.rs  dbtuning_test.rs  init_db_test.rs  integration_tests.rs  products_bm25_test.rs  products_facets_test.rs  products_hybrid_test.rs  products_vector_test.rs  queries_comprehensive_test.rs  search_components_tests.rs  search_page_tests.rs  server_fn_tests.rs  web_app_search_tests.rs
pg_search_tests/tests/common/: mod.rs
sql_examples/: 00_setup_extensions.sql  02_exact_term_search.sql  04_phrase_search.sql  06_numeric_range_search.sql  08_products_schema.sql  10_bm25_search_tests.sql  11_vector_search_tests.sql  12_hybrid_search_tests.sql  14_age_graph_setup.sql  README.md  test_utils.sql
