[package]
name = "pg_search_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "rust_decimal", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
pgvector = "0.4"

# Leptos framework for web application
leptos = { version = "0.7", features = ["csr", "ssr"], optional = true }
leptos_meta = { version = "0.7", optional = true }
leptos_router = { version = "0.7", optional = true }
leptos_actix = { version = "0.7", optional = true }

# Server dependencies
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }

# Additional types for web app
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rand = "0.8"
cfg-if = "1"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
web = ["leptos", "leptos_meta", "leptos_router", "leptos_actix", "actix-web", "actix-files"]
hydrate = ["leptos/hydrate", "console_error_panic_hook", "wasm-bindgen"]

[[test]]
name = "bm25_detailed_tests"
path = "tests/bm25_detailed_tests.rs"
harness = true

[[test]]
name = "advanced_search_tests"
path = "tests/advanced_search_tests.rs"
harness = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true

[[test]]
name = "dbtuning_test"
path = "tests/dbtuning_test.rs"
harness = true

[[test]]
name = "init_db_test"
path = "tests/init_db_test.rs"
harness = true

[[test]]
name = "products_bm25_test"
path = "tests/products_bm25_test.rs"
harness = true

[[test]]
name = "products_vector_test"
path = "tests/products_vector_test.rs"
harness = true

[[test]]
name = "products_hybrid_test"
path = "tests/products_hybrid_test.rs"
harness = true

[[test]]
name = "products_facets_test"
path = "tests/products_facets_test.rs"
harness = true

[[test]]
name = "web_app_search_tests"
path = "tests/web_app_search_tests.rs"
harness = true
required-features = ["web"]

[[bin]]
name = "connection_test"
path = "src/bin/connection_test.rs"

[[bin]]
name = "bm25_test"
path = "src/bin/bm25_test.rs"

[[bin]]
name = "vector_test"
path = "src/bin/vector_test.rs"

[[bin]]
name = "hybrid_search_test"
path = "src/bin/hybrid_search_test.rs"
