[package]
name = "pg_search_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Server-side database dependencies (NOT for WASM)
postgres = { version = "0.19", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "rust_decimal", "json"], optional = true }
dotenv = { version = "0.15", optional = true }
pgvector = { version = "0.4", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Shared dependencies (work on both server and WASM)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Leptos framework for web application
leptos = { version = "0.8", optional = true }
leptos_meta = { version = "0.8", optional = true }
leptos_router = { version = "0.8", optional = true }
leptos_actix = { version = "0.8", optional = true }
leptos_config = { version = "0.8", optional = true }

# Server dependencies
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }

# Additional types for web app
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rand = "0.8"
cfg-if = "1"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["KeyboardEvent"], optional = true }
# getrandom with WASM support - needed for hydration (NOT optional to unify with transitive deps)
# Both versions are pulled by transitive dependencies
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
# Database tools feature for tests and CLI tools
db-tools = ["postgres", "tokio", "sqlx", "dotenv", "pgvector", "tracing-subscriber"]
# Server-side web app with database access
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_actix", "leptos_config", "actix-web", "actix-files", "web-sys", "db-tools"]
# Client-side hydration (WASM) - NO database dependencies
hydrate = ["leptos/hydrate", "leptos_meta", "leptos_router", "console_error_panic_hook", "wasm-bindgen"]
# Legacy feature for tests
web = ["ssr"]

[[test]]
name = "bm25_detailed_tests"
path = "tests/bm25_detailed_tests.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "advanced_search_tests"
path = "tests/advanced_search_tests.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "dbtuning_test"
path = "tests/dbtuning_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "init_db_test"
path = "tests/init_db_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "products_bm25_test"
path = "tests/products_bm25_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "products_vector_test"
path = "tests/products_vector_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "products_hybrid_test"
path = "tests/products_hybrid_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "products_facets_test"
path = "tests/products_facets_test.rs"
harness = true
required-features = ["db-tools"]

[[test]]
name = "web_app_search_tests"
path = "tests/web_app_search_tests.rs"
harness = true
required-features = ["web"]

[[test]]
name = "backend_search_tests"
path = "tests/backend_search_tests.rs"
harness = true
required-features = ["ssr"]

[[test]]
name = "queries_comprehensive_test"
path = "tests/queries_comprehensive_test.rs"
harness = true
required-features = ["ssr"]

[[test]]
name = "server_fn_tests"
path = "tests/server_fn_tests.rs"
harness = true
required-features = ["ssr"]

[[test]]
name = "component_render_tests"
path = "tests/component_render_tests.rs"
harness = true
required-features = ["ssr"]

[[bin]]
name = "connection_test"
path = "src/bin/connection_test.rs"
required-features = ["db-tools"]

[[bin]]
name = "bm25_test"
path = "src/bin/bm25_test.rs"
required-features = ["db-tools"]

[[bin]]
name = "vector_test"
path = "src/bin/vector_test.rs"
required-features = ["db-tools"]

[[bin]]
name = "hybrid_search_test"
path = "src/bin/hybrid_search_test.rs"
required-features = ["db-tools"]

[[bin]]
name = "pg_search_tests"
path = "src/bin/main.rs"
required-features = ["ssr"]

# Library target for WASM hydration
[lib]
crate-type = ["cdylib", "rlib"]

# Build profiles for different scenarios
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Package metadata for cargo-leptos
[package.metadata.leptos]
# Which bin target to use (we have multiple binaries)
bin-target = "pg_search_tests"

# Project name - must match the binary name for cargo-leptos to find it
output-name = "pg_search_tests"

# The site root folder is where cargo-leptos will build your site, usually target/site
site-root = "target/site"

# The site package version - should match your Cargo.toml version
site-pkg-dir = "pkg"

# [Optional] CSS Files compiled in release mode at build time. Your app.css will always be included.
style-file = "src/web_app/style/main.css"

# Assets source dir. All files here will be copied and synchronized to site-root.
assets-dir = "public"

# The IP and port (must be different from the server PORT)
reload-port = 3001

# The port to use for automatic reload monitoring
reload-ws-protocol = "ws"

# [Optional] The environment Leptos will run with, used to configure hydration
env = "DEV"

# The features to use when compiling the bin target (server-side)
bin-features = ["ssr"]

# The features to use when compiling the lib target (client-side WASM)
lib-features = ["hydrate"]

# If this is true, cargo-leptos will automatically inject websocket code into binary (dev only)
watch = true
